Using DecimalCoordinates class to manage corner coordinates, sorting orbit states by time ascending, removing unused classes